added icons to header, added structure via css, finalized the header

--- a/index.html
+++ b/index.html
@@ -9,12 +9,25 @@
 <body>
     <div class="container">
         <div class="header">
-            <div class="search">SEARCH
-                <input type="search" id="search" name="search">
+            <div class="search">
+                <img src="icons/search_24dp_000000_FILL0_wght400_GRAD0_opsz24.svg" alt="search">
+                <input type="search" id="searchField" name="search">
             </div>
-            <div class="account">ACC</div>
-            <div class="hi">HI</div>
-            <div class=".blueButtons">BUTTONS</div>     
+            <div class="account">
+                <img id="bell" src="icons/bell.svg" alt="notifications">
+                <img id="miniProfilePic" src="icons/icons8-space-75.png" alt="profile Pic">
+                <p class="main-headers">Monocube</p>
+            </div>
+            <div class="hi">
+                <img id="profilePic" src="icons/icons8-space-75.png" alt="profile Pic">
+                <p class="main-headers">Hi there,</p>
+                <p id="greetedName">Monocube (@monocube)</p>
+            </div>
+            <div class="blueButtons">
+                <button class="blue">New</button>
+                <button class="blue">Upload</button>
+                <button class="blue">Share</button>
+            </div>     
         </div>
 
         <div class="sidebar">
