re arranged projects part once again, to mostly fit two columns by default

--- a/index.html
+++ b/index.html
@@ -107,7 +107,9 @@
                     <div class="card">
                         <div>
                             <p class="card-header">Not as Cool Project</p>
-                            <p class="card-text">I mean not everything can be awesome and cool. Sometimes, they are boring but necessary.</p>    
+                            <p class="card-text">I mean not everything can be awesome and cool. Sometimes, they are boring but necessary. I'm just gonna 
+                                add some more dummy text hear to make the card div look less empty.
+                            </p>    
                         </div>
 
                         <div class="card-icon-div">
@@ -119,7 +121,10 @@
                     <div class="card">
                         <div>
                             <p class="card-header">Impossible App</p>
-                            <p class="card-text">Nobody said it was possible, and yet here we are to wintess a web dev miracle.</p>    
+                            <p class="card-text">Nobody said it was possible, and yet here we are to wintess a web dev miracle. All in All
+                                we straight up pushing some boundaries with this one. Pretty sure everything is gonna collapse with the next update
+                                somehow.
+                            </p>    
                         </div>
 
                         <div class="card-icon-div">
@@ -131,7 +136,10 @@
                     <div class="card">
                         <div>
                             <p class="card-header">Easy Peasy App</p>
-                            <p class="card-text">We all start somewhere. This was easy to make and yet complicated to describe. Go figure.</p>    
+                            <p class="card-text">We all start somewhere. This was easy to make and yet complicated to describe. Go figure. Still 
+                                a tech wonder all things considered. I'll think nothing less of my creations. All this is just dummy text so that i'm 
+                                not using lorem ipsum again. 
+                            </p>    
                         </div>
 
                         <div class="card-icon-div">
