added readme text, added credits for icons used.

--- a/index.html
+++ b/index.html
@@ -78,8 +78,12 @@
                         <p>Privacy</p>
                     </li>
                 </ul>
-            </div>  
-                
+            </div>
+            <div class="credits">
+                <p>UI icons provided by <a href="https://fonts.google.com/icons">Google Fonts.</a></p>   
+                <p>Space icons provided by <a href="https://icons8.com/icons">icon8.</a></p> 
+            </div>
+               
         </div>
 
         <div class="main">
